name:          tasker
category:      tasker
version:       0.1
cabal-version: >= 1.10
author:        jg
stability:     experimental
homepage:      http://github.com/jg/tasker/
build-type:    Custom

extra-source-files:
  .ghci
  .gitignore
  .travis.yml
  .vim.custom
  CHANGELOG.markdown
  HLint.hs
  README.markdown
  travis/cabal-apt-install
  travis/config

library
  hs-source-dirs: src
  default-language: Haskell2010
  ghc-options: -Wall
  build-depends:
    base >= 4.4 && < 5,
    regex-posix ==0.95.*,
    mtl,
    regex-posix ==0.95.*,
    regex-base ==0.93.*,
    time ==1.4.0.1,
    old-locale ==1.0.0.5

test-suite doctests
  type:    exitcode-stdio-1.0
  main-is: doctests.hs
  default-language: Haskell2010
  build-depends:
    base,
    directory >= 1.0,
    doctest >= 0.9.1,
    filepath
  ghc-options: -Wall -threaded
  if impl(ghc<7.6.1)
    ghc-options: -Werror
  hs-source-dirs: tests
